# twatch-rust

./: .gitignore  README.md  package.json  slides.md
.github/workflows/: pages.yml
VTT/: _redirects  index.html
VTT/assets/: DrawingControls.19776cfe.js  DrawingControls.vue_vue_type_script_setup_true_lang.df1a0eba.js  DrawingLayer.7b5d6177.js  DrawingPreview.11ecb6f8.js  FileSaver.min.54743f27.js  Presenter.9b2f04f2.js  index.5cf3166e.js  index.7646d796.css
examples/bindgen/: header.h
examples/blinky/: Cargo.toml
examples/blinky-c3/: Cargo.toml
examples/hello-world/: Cargo.toml
examples/hello-world/src/: main.rs
examples/typestate/: Cargo.toml
main/: 404.html  _redirects  index.html
main/assets/: DrawingControls.23427327.js  DrawingControls.d560de78.js  DrawingControls.vue_vue_type_script_setup_true_lang.09241751.js  DrawingControls.vue_vue_type_script_setup_true_lang.80c53ec0.js  DrawingLayer.0f72b5b1.js  DrawingLayer.2d61b291.js  DrawingPreview.bf00e692.js  DrawingPreview.c3fbf759.js  FileSaver.min.1d041dd4.js  FileSaver.min.c055fb11.js  Presenter.ba2cc4cc.js  Presenter.f0fef188.js  index.612d1127.js  index.8bc23e99.js  index.c9e3c925.css  index.df70d646.css
public/: esp32.png.sb-e8cc2267-tsKQxp
theme/: package.json
theme/layouts/: cover.vue
touraine-tech/: 404.html  _redirects
touraine-tech/assets/: DrawingControls.042b7eb1.js  DrawingControls.vue_vue_type_script_setup_true_lang.ad5d2f83.js  DrawingLayer.17c70a13.js  DrawingPreview.9e946f01.js  FileSaver.min.088c3352.js  Presenter.6926e115.js  (+2 more)
vtt/: _redirects  index.html
(+19 files in other folders)
